# PokeYew

./: .gitignore  Cargo.toml  index.html
src/: form.rs  main.rs  pokemon.rs  pokemon_component.rs
src/components/: form.rs  header_component.rs  mod.rs  pokemon_component.rs  pokemon_input_form.rs
src/props/: input_pokemon_callback_props.rs  mod.rs
src/structs/: mod.rs  pokemon.rs  pokemon_species.rs  species.rs
src/styles/: index.scss
