[package]
name = "pokeyew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde_json = "1.0.87"
serde = { version =  "1.0.147", features = ["derive"] }
gloo-net = "0.2.4"
wasm-bindgen-futures = "0.4.33"
reqwest = { version =  "0.11.12", features = ["json"] } 

